virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-service
  namespace: default
spec:
  hosts:
  - tt.thaslij.com
  gateways:
  - istio-system/my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
     - destination:
        host: hello-world-service  # Replace with your service name
        port:
          number: 8082
